manifests/PAG/node-exporter-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: kube-system
  labels:
    app: node-exporter
  annotations:
    prometheus.io/should_be_scraped: "true" 
    prometheus.io/metric_path: "/metrics"
    prometheus.io/scrape_port: "9100"
    prometheus.io/scrape_scheme: "http"
spec:
  clusterIP: None
  ports:
  - name: metrics
    port: 9100
    targetPort: 9100
    protocol: TCP
  selector:
    app: node-exporter
  type: ClusterIP
---
apiVersion: apps/v1beta2
kind: DaemonSet
metadata:
  labels:
    app: node-exporter
  name: node-exporter
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      containers:
      - name: node-exporter
        image: quay.io/prometheus/node-exporter
        args: 
        - '--path.procfs=/host/proc'
        - '--path.sysfs=/host/sys'
        volumeMounts:
        - name: proc
          mountPath: /host/proc
        - name: sys
          mountPath: /host/sys
      hostNetwork: true
      hostPID: true 
      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: sys
        hostPath:
          path: /sys
